tests/paczka1/fuzzy1/53088541.err
Error in line 5: Nhktt97E A13 54,3
Error in line 26: A506 A13 38,4
Error in line 28: b1D4CT S743 36,2
